# dbt-eppo-sync

./: README.md  pyproject.toml
.github/workflows/: test.yml
examples/: run_example.py  sample_manifest.json  sample_metrics.yml  sample_semantic_model.yml
src/dbt_eppo_sync/: cli.py  eppo_client.py  eppo_metric_schema.json  mapper.py  parser.py  sync.py  validator.py
tests/: test_eppo_client.py  test_mapper.py  test_parser.py  test_sync.py
